# torizon-cloud-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  blog.md
.github/workflows/: ci.yml
src/: auth.rs  client.rs  config.rs  main.rs  output.rs
src/commands/: devices.rs  fleets.rs  lockboxes.rs  login.rs  metrics.rs  mod.rs  packages.rs  remote_access.rs  updates.rs
